[package]
name = "grrs"
version = "0.1.0"
authors = ["pengxi <pengxi.lirawx@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
structopt = "0.2.10"
failure = "0.1.5"
exitfailure = "0.5.1"


[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"