[package]
name = "another_grrs"
version = "0.1.0"
edition = "2018"
authors = ["lirawx <lira_wx@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/lirawx/rust-learning-tutorial"
repository = "https://github.com/lirawx/rust-learning-tutorial"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
structopt = "0.2.10"
failure = "0.1.5"
exitfailure = "0.5.1"


[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"